--- a/react-todo/src/App.css
+++ b/react-todo/src/App.css
@@ -16,6 +16,7 @@
 
 .menu {
   background-color: #f1f3f5;
+  text-align: center;
 }
 
 .input {
@@ -37,4 +38,21 @@
 
 .highlight {
   text-decoration: line-through;
+}
+
+.color-box {
+  width: 35px;
+  height: 35px;
+  margin-right: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-block;
+}
+
+.color-box:hover {
+  cursor: pointer;
+}
+
+.select {
+  border: 3px solid #3bc9db;
 }
