--- a/react-todo/src/App.css
+++ b/react-todo/src/App.css
@@ -25,8 +25,11 @@
   padding-bottom: 10px;
 }
 
+.input #button {
+  margin-left: 40px;
+}
+
 .todo {
-  text-align: center;
   font-size: 1rem;
   padding-top: 15px;
   padding-bottom: 15px;
