--- a/react-gomoku/src/App.css
+++ b/react-gomoku/src/App.css
@@ -11,6 +11,7 @@
   border: 1px solid black;
   padding: 0;
   width: 50px;
+  height: 50px;
   background-color: #ffc078;
 }
 
@@ -38,4 +39,18 @@
   width: 20px;
   height: 20px;
   display: inline-block;
+}
+
+.button {
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  margin-top: 20px;
+  margin-bottom: 12px;
+  display: block;
+  border: none;
+  border-radius: 15px;
+  font-size: 1rem;
+  /* color: white; */
+  /* background-color: #4dabf7; */
 }
