오목 - 타이머 기능 추가

--- a/react-gomoku/src/App.css
+++ b/react-gomoku/src/App.css
@@ -23,6 +23,21 @@
   margin-top: 40px;
 }
 
+.message-box {
+  position: absolute;
+  top: 40px;
+  right: 80px;
+  width: 200px;
+  height: 100px;
+  border: 1px solid black;
+}
+
+.timer {
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.6rem;
+}
+
 .black-stone {
   border: 1px solid black;
   border-radius: 90px;
@@ -51,6 +66,11 @@
   border: none;
   border-radius: 15px;
   font-size: 1rem;
-  /* color: white; */
-  /* background-color: #4dabf7; */
+  color: white;
+  background-color: #4dabf7;
+}
+
+.button:disabled {
+  background-color: #cccccc;
+  color: #666666;
 }
