--- a/react-gomoku/src/App.css
+++ b/react-gomoku/src/App.css
@@ -2,7 +2,7 @@
   width: 500px;
   height: 500px;
   margin: 0 auto;
-  border: 2px solid black;
+  border: 3px solid black;
   border-collapse: collapse;
 }
 
@@ -16,7 +16,6 @@
 }
 
 .info {
-  border: 3px dotted black;
   width: 300px;
   height: 200px;
   margin: 0 auto;
@@ -28,7 +27,7 @@
   top: 40px;
   right: 80px;
   width: 200px;
-  height: 100px;
+  height: 150px;
   border: 1px solid black;
 }
 
@@ -70,7 +69,6 @@
   background-color: #4dabf7;
 }
 
-.button:disabled {
-  background-color: #cccccc;
-  color: #666666;
+.button:hover {
+  cursor: pointer;
 }
