버튼 합치고 메시지 막스 UI 수정

--- a/react-gomoku/src/App.css
+++ b/react-gomoku/src/App.css
@@ -34,6 +34,7 @@
 .timer {
   text-align: center;
   margin: 0 auto;
+  margin-top: 20px;
   font-size: 1.6rem;
 }
 
@@ -71,4 +72,17 @@
 
 .button:hover {
   cursor: pointer;
+}
+
+.turn {
+  position: relative;
+  left: 50px;
+  top: 10px;
+}
+
+.winner {
+  position: relative;
+  top: 30px;
+  left: 35px;
+  font-size: 1.7rem;
 }
