--- a/react-gomoku/src/App.css
+++ b/react-gomoku/src/App.css
@@ -2,6 +2,7 @@
   width: 500px;
   height: 500px;
   margin: 0 auto;
+  margin-top: 40px;
   border: 3px solid black;
   border-collapse: collapse;
 }
@@ -24,36 +25,42 @@
 
 .message-box {
   position: absolute;
-  top: 40px;
-  right: 80px;
+  top: 45px;
+  right: 60px;
   width: 200px;
-  height: 150px;
-  border: 1px solid black;
+  height: 160px;
+  border: 1px solid #ff8787;
+  border-radius: 15px;
 }
 
 .timer {
+  width: 150px;
+  height: 35px;
   text-align: center;
   margin: 0 auto;
   margin-top: 20px;
   font-size: 1.6rem;
+  color: #ff8787;
 }
 
 .black-stone {
-  border: 1px solid black;
+  border-style: none;
   border-radius: 90px;
   background-color: black;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   display: inline-block;
+  box-shadow: inset -1px -2px 3px #868e96;
 }
 
 .white-stone {
   border-style: none;
   border-radius: 90px;
   background-color: white;
-  width: 20px;
-  height: 20px;
+  width: 22px;
+  height: 22px;
   display: inline-block;
+  box-shadow: inset -1px -2px 2px #495057;
 }
 
 .button {
@@ -67,22 +74,35 @@
   border-radius: 15px;
   font-size: 1rem;
   color: white;
-  background-color: #4dabf7;
+  outline: none;
+}
+
+.button:active {
+  transform: translateY(3px);
 }
 
 .button:hover {
   cursor: pointer;
 }
 
+.button:disabled {
+  background-color: #cccccc !important;
+  color: white;
+}
+
 .turn {
-  position: relative;
-  left: 50px;
-  top: 10px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 20px;
+  width: 150px;
 }
 
 .winner {
-  position: relative;
-  top: 30px;
-  left: 35px;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 15px;
+  width: 150px;
   font-size: 1.7rem;
+  font-weight: 700;
+  color: #4263eb;
 }
